[gd_scene load_steps=10 format=3 uid="uid://244epntu5xut"]

[ext_resource type="Script" uid="uid://jn5jygpasee7" path="res://blackjack/black_jack_scene.gd" id="1_sr83v"]
[ext_resource type="Script" uid="uid://br0ek7mj0nydw" path="res://blackjack/player_hand.gd" id="2_a0x6j"]
[ext_resource type="Script" uid="uid://6b21vsjnamps" path="res://blackjack/dealer_hand.gd" id="2_kegn5"]
[ext_resource type="Texture2D" uid="uid://c0s7tlcgsogvq" path="res://assets/pc thing/pc_all_but_buttons.png" id="2_nvggx"]
[ext_resource type="Texture2D" uid="uid://c6ot3kh7widfo" path="res://assets/icon.svg" id="3_kegn5"]
[ext_resource type="Texture2D" uid="uid://d06gtqqit3dfe" path="res://assets/pc thing/pc_0001_hit_button.png" id="5_ri8c0"]
[ext_resource type="Texture2D" uid="uid://byx6b1gnwcfdc" path="res://assets/pc thing/pc_0000_stand_button.png" id="6_7xgea"]
[ext_resource type="Texture2D" uid="uid://crt231os23ini" path="res://assets/cards/card stack.png" id="6_tdvw6"]

[sub_resource type="LabelSettings" id="LabelSettings_x4jgr"]

[node name="blackJackScene" type="Node2D"]
script = ExtResource("1_sr83v")

[node name="PcAllButButtons" type="Sprite2D" parent="."]
z_index = 300
texture = ExtResource("2_nvggx")

[node name="dealerHand" type="Node2D" parent="."]
position = Vector2(-80, -40)
script = ExtResource("2_kegn5")

[node name="playerHand" type="Node2D" parent="."]
position = Vector2(-80, 136)
script = ExtResource("2_a0x6j")

[node name="buttons" type="Node2D" parent="."]
visible = false
z_index = 304
position = Vector2(-424, -88)

[node name="hitButton" type="Button" parent="buttons"]
z_index = 303
offset_left = 8.0
offset_top = -40.0
offset_right = 152.0
offset_bottom = 104.0
icon = ExtResource("5_ri8c0")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="standButton" type="Button" parent="buttons"]
z_index = 303
offset_left = 8.0
offset_top = 128.0
offset_right = 152.0
offset_bottom = 272.0
icon = ExtResource("6_7xgea")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="CardStackNode" type="Node2D" parent="."]
z_index = 301
position = Vector2(312, 64)

[node name="CardStack" type="Sprite2D" parent="CardStackNode"]
z_index = 301
scale = Vector2(2, 2)
texture = ExtResource("6_tdvw6")

[node name="endingScreens" type="Node2D" parent="."]
z_index = 310
position = Vector2(-32, 40)

[node name="VictoryScreen" type="Sprite2D" parent="endingScreens"]
visible = false
z_index = 4096
scale = Vector2(3.0625, 1)
texture = ExtResource("3_kegn5")

[node name="DefeatScreen" type="Sprite2D" parent="endingScreens"]
visible = false
scale = Vector2(0.5, 1)
texture = ExtResource("3_kegn5")

[node name="DrawScreen" type="Sprite2D" parent="endingScreens"]
visible = false
scale = Vector2(1, 0.3125)
texture = ExtResource("3_kegn5")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Bet" type="Node2D" parent="."]
z_index = 301
position = Vector2(-192, 72)

[node name="BetSlider" type="HSlider" parent="Bet"]
z_index = 303
offset_left = -72.0
offset_top = 80.0
offset_right = 144.0
offset_bottom = 96.0
rotation = -1.57079
metadata/_edit_use_anchors_ = true

[node name="BetLabel" type="Label" parent="Bet"]
z_index = 303
offset_left = -40.0
offset_top = -80.0
offset_bottom = -48.0
text = "bet"
label_settings = SubResource("LabelSettings_x4jgr")
metadata/_edit_use_anchors_ = true

[node name="BetButton" type="Button" parent="Bet"]
z_index = 303
offset_left = -48.0
offset_top = 16.0
offset_right = 24.0
offset_bottom = 88.0
icon = ExtResource("5_ri8c0")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[connection signal="gui_input" from="buttons/hitButton" to="." method="_onClickHit"]
[connection signal="gui_input" from="buttons/standButton" to="." method="_onClickStand"]
[connection signal="value_changed" from="Bet/BetSlider" to="." method="_onBetSliderSlide"]
[connection signal="gui_input" from="Bet/BetButton" to="." method="_onPressBet"]
